# content-bulk.online.django

./: .drone.yml  .gitignore  Dockerfile  README.md  TODO.rm  pyproject.toml  requirements.txt
app/: conftest.py  gunicorn_conf.py  pytest.ini  pytest_settings.py
app/app/: base_settings.py  dev_settings.py  settings.py  urls.py
app/scrapy_parser/: apps.py
app/zen/: apps.py  filters.py  models.py  pagination.py  serializers.py  tests.py  views.py
app/zen/management/commands/: settestdata.py
app/zen/migrations/: 0002_alter_zenarticle_public_date_and_more.py
djangoapp/: conftest.py  pytest.ini  pytest_settings.py
djangoapp/djangoapp/: settings.py  urls.py
djangoapp/zen/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
djangoapp/zen/management/commands/: settestdata.py
djangoapp/zen/migrations/: 0001_initial.py  0002_alter_zenarticle_options_alter_zenfeed_options_and_more.py  0003_alter_zenarticle_link_alter_zenarticle_title_and_more.py  0003_remove_zenarticle_public_time.py
